# granite

./: AGENTS.md  Cargo.toml
crates/granite/: Cargo.toml
crates/granite-draw/: Cargo.toml
crates/granite-draw/assets/: heightmap.raw  terrain.wgsl
crates/granite-draw/examples/: depth.rs  render_target.rs  spline.rs  terrain.rs
crates/granite-draw/src/: bindings.rs  commands.rs  depth_buffer.rs  draw_list.rs  execution.rs  lib.rs  mesh.rs  prepared_draw.rs  render_target.rs  resources.rs  sampler.rs  textures.rs
crates/granite-draw/src/common/: mod.rs  stable_map.rs  stable_set.rs  stable_vec.rs
crates/granite-macros/: Cargo.toml
crates/granite-macros/src/: lib.rs
crates/granite/examples/: minimal.rs  render_target.rs  spline.rs
crates/granite/src/: app.rs  input.rs  lib.rs  renderer.rs  scene.rs
crates/granite/src/common/: id.rs  stable_map.rs  stable_set.rs  stable_vec.rs
crates/granite/src/renderer/: bindings.rs  commands.rs  execution.rs  frame.rs  mesh.rs  mod.rs  prepared_draw.rs  render_target.rs  resources.rs  sampler.rs  textures.rs
examples/: minimal.rs
src/: app.rs  camera.rs  engine.rs  input.rs  lib.rs  mesh.rs  renderer.rs  scene.rs
