[package]
name = "granite"
version = "0.1.0"
edition = "2024"

[dependencies]
granite-macros = { path = "../granite-macros" }
encase = "0.12"
generational-arena = "0.2"
glam = { version = "0.30", features = ["encase"] }
pollster = "0.4"
thiserror = "2.0"
tracing = "0.1"
wgpu = "28.0"
winit = "0.30"
